--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,30 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.text{
+  color: brown;
+  text-shadow: 5px 2px blue;
 }
+.what{
+  color: blue;
+  text-shadow: 5px 2px brown
+}
+main{
+  position: relative;
+background-color: antiquewhite;
+}
+.hacked{
+ position: absolute;
+ top: 400px;
+ left: 400px;
+}
+.sub{
+  position: absolute;
+  top: 200px;
+  left: 350px;
+}
+.super{
+  font-family: cursive;
+  font-size: medium;
+  color: brown;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  background-color: rgb(126, 121, 126);
 }
